Updatep libs and fixed methods for use Java 11